--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,4 +1,6 @@
 ---
+// src/pages/[...slug].astro
+
 import { type CollectionEntry, getCollection } from 'astro:content';
 import Prose from '../components/Prose.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
@@ -15,7 +17,8 @@ const { GISCUS_REPO, GISCUS_REPO_ID, GISCUS_CATEGORY, GISCUS_CATEGORY_ID } = loa
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
 	return posts.map((post: any) => ({
-		params: { slug: post.id },
+		// Here is the fix: change 'post.id' to 'post.slug'
+		params: { slug: post.slug },
 		props: post
 	}));
 }
@@ -36,63 +39,62 @@ const { Content, headings } = await render(post);
 				<Prose>
 					<div>
 						<h1 class='!my-1 leading-tight'>{title}</h1>
-            <div class='text-sm font-[500] mt-2 sm:mt-0 py-1 md:text-right flex flex-col sm:flex-row gap-3 sm:justify-between sm:items-center'>
-              {
-                <div class='flex gap-2'>
-                  {
-                    (tags || [] )?.map((tag: string) => (
-                      <a
-                        class='border border-zinc-300 dark:border-zinc-700 rounded-2xl
-                          text-sm text-zinc-700 dark:text-zinc-300 no-underline px-2 py-0.5
-                          transition-all duration-700
-                        hover:border-zinc-700 dark:hover:border-zinc-300'
-                        href={`/tags/${slugify(tag)}`}>
-                        {tag}
-                      </a>
-                    ))
-                  }
-                </div>
-              }
-              <div>
-                {
-                  updatedDate ?
-                    <>Updated on <strong><FormattedDate date={updatedDate} /></strong></>
-                  :
-                    <>Published on <strong><FormattedDate date={pubDate} /></strong></>
-                }
-              </div>
-            </div>
+            <div class='text-sm font-[500] mt-2 sm:mt-0 py-1 md:text-right flex flex-col sm:flex-row gap-3 sm:justify-between sm:items-center'>
+              {
+                <div class='flex gap-2'>
+                  {
+                    (tags || [] )?.map((tag: string) => (
+                      <a
+                        class='border border-zinc-300 dark:border-zinc-700 rounded-2xl
+                          text-sm text-zinc-700 dark:text-zinc-300 no-underline px-2 py-0.5
+                          transition-all duration-700
+                        hover:border-zinc-700 dark:hover:border-zinc-300'
+                        href={`/tags/${slugify(tag)}`}>
+                        {tag}
+                      </a>
+                    ))
+                  }
+                </div>
+              }
+              <div>
+                {
+                  updatedDate ?
+                    <>Updated on <strong><FormattedDate date={updatedDate} /></strong></>
+                  :
+                    <>Published on <strong><FormattedDate date={pubDate} /></strong></>
+                }
+              </div>
+            </div>
 					</div>
-          <div class='py-3 overflow-hidden'>
-            {coverImage && <Image class='rounded-3xl w-full m-0 lg:mb-2' src={coverImage} alt={title} loading='eager' />}
-          </div>
+          <div class='py-3 overflow-hidden'>
+            {coverImage && <Image class='rounded-3xl w-full m-0 lg:mb-2' src={coverImage} alt={title} loading='eager' />}
+          </div>
 					<Content />
 				</Prose>
-        {
-          GISCUS_REPO &&
-            <script
-              id='giscus-script'
-              is:inline
-              src='https://giscus.app/client.js'
-              data-repo={GISCUS_REPO}
-              data-repo-id={GISCUS_REPO_ID}
-              data-category={GISCUS_CATEGORY}
-              data-category-id={GISCUS_CATEGORY_ID}
-              data-mapping='pathname'
-              data-strict='0'
-              data-reactions-enabled='1'
-              data-emit-metadata='0'
-              data-input-position='bottom'
-              data-theme='preferred_color_scheme'
-              data-lang='en'
-              crossorigin='anonymous'
-              async></script>
-        }
+        {
+          GISCUS_REPO &&
+            <script
+              id='giscus-script'
+              is:inline
+              src='https://giscus.app/client.js'
+              data-repo={GISCUS_REPO}
+              data-repo-id={GISCUS_REPO_ID}
+              data-category={GISCUS_CATEGORY}
+              data-category-id={GISCUS_CATEGORY_ID}
+              data-mapping='pathname'
+              data-strict='0'
+              data-reactions-enabled='1'
+              data-input-position='bottom'
+              data-theme='preferred_color_scheme'
+              data-lang='en'
+              crossorigin='anonymous'
+              async></script>
+        }
 
 			</article>
 		</main>
-    <div class='shrink-0 w-[280px] hidden md:block'>
-      <div class='mb-4'>
+    <div class='shrink-0 w-[280px] hidden md:block'>
+      <div class='mb-4'>
 				<AboutTheAuthor />
 			</div>
 			<TableOfContent headings={headings} />
